Nijie Downloader 1.0.6.0
- Feature: Add Member's doujin mode.
- Bug Fix: Fix Issue ##21, continue to next image if encounter http error 404/403 for member and tags batch download.

Nijie Downloader 1.0.5.0
- Feature: Add My Bookmarked Members and My Bookmarked Images (Request #19).
- Feature: Add retry count option.
- Enhancement: Refactor download code in library.

Nijie Downloader 1.0.4.0
- Feature: Add option to skip image if already downloaded in DB.
- Feature: Add option for the starting page.
- Enhancement: Save manga information to DB.
- Enhancement: Refactor ViewModel and MainWindow.
- Enhancement: Show error list on Batch Job.
- Bug Fix: Update filesize detection.
- Bug Fix: Fix Issue #16, status update in job.
- Bug Fix: Fix Issue #11, Datetime value.

Nijie Downloader 1.0.3.0
- Feature: Add Trace DB to log setting.
- Feature: Add Job Completion notification dialog.
- Feature: Implement Edit Batch Job item.
- Feature: Add download member avatar for Download by member in setting.
- Feature: Add separate file name format for manga and avatar.
- Feature: Add option to enable network compression.
- Feature: Add option to overwrite only different size (Additional overhead if compression enabled).
- Feature: Add option to backup old file.
- Feature: Add option to enable saving image info to DB.
- Feature: Add option to change log level.
- Enhancement: Add DB lock when inserting.
- Enhancement: Move Add Job as dialog window.
- Bug Fix: Skip locked image in batch mode.
- Bug Fix: Fix date time parser for image.
- Bug Fix: Change header for Batch Download tab.
- Bug Fix: Fix download by member to follow limit.

Nijie Downloader 1.0.2.0
- Experimental: Add HTTPS support.
- Feature: Add settings to change Concurent Job (require restart).
- Feature: Add settings to add delay between each job.
- Feature: Implement browse/open save directory.
- Feature: Implement delete user.config.
- Bug Fix: Update Start/Stop/Pause logic.
- Bug Fix: Update login logic.